# t

./: CMakeLists.txt
.cache/clangd/index/: hello.c.EC3604EF251A766F.idx  hello_test.c.3734CC8B1742F8E5.idx
scripts/: run
src/test/: CMakeLists.txt  hello.c
tests/: CMakeLists.txt  hello_test.c
